--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
 </body>
 	<div>
-		<a href="https://youtu.be/YxWlaYCA8MU" >My current favourite song is <pathan></a>
+		<a href="https://youtu.be/YxWlaYCA8MU" target="_blank">My current favourite song is &ltpathan&gt</a>
 	</div>
 	
 </html>
